Rendered the list of forms from the Avantos API

--- a/package.json
+++ b/package.json
@@ -20,9 +20,12 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "test": "concurrently \"npm run server\" \"react-scripts test\"",
+    "eject": "react-scripts eject",
+    "server": "nodemon --watch server.ts --exec \"tsc server.ts && node server.js\"",
+    "dev": "concurrently \"npm run server\" \"npm start\""
   },
+  "proxy": "http://localhost:5000",
   "eslintConfig": {
     "extends": [
       "react-app",
@@ -40,5 +43,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "concurrently": "^9.2.0",
+    "nodemon": "^3.1.10",
+    "ts-node": "^10.9.2"
   }
 }
